# agent-study-project

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/agents/: personal_chief.py
lang_chain/: demo_ReAct.py  demo_agent.py  demo_chain_parser.py  demo_cook_manager.py  demo_document_loaders.py  demo_init_model.py  demo_prompt_template.py  demo_rag.py  init_chat_models.py  init_middlewares.py  utils.py
lang_chain/resources/: prompt_ReAct.md
machine_learning/: knn_classifier.py  knn_regress.py  linear_regress_1.py
mcp_server/weather/: mcp_stdio_proxy.py  weather_tools.py
model_api_request/: kimi.py
python_base/: __init__.py  date_util.py  file_util.py  http_request.py  image_utils.py  logging_saf.py
pytorch/: tensor.py  tensor_calculation.py  tensor_convert_numpy.py  tensor_convert_type.py  tensor_create.py
rag/: rag_demo.py
rag/rag_demo/: rag_demo.py
resources/: Teyvathis.md  demo_agent_checkpointer.db  demo_agent_checkpointer.db-shm  demo_agent_checkpointer.db-wal  news_1.md  prompt_code_assistant.md  prompt_cook_manager.md  prompt_glby.md  prompt_glby_format.md  stu.csv  stu.json  stu_arr.json
