[project]
name = "agent-study-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "torch==2.12.0",
]
